@startuml Formula1 Domain Model

' Entity styling
skinparam class {
  BackgroundColor LightBlue
  ArrowColor Black
  BorderColor Navy
}

' Domain entities
class Driver {
  -id: Long
  -name: String
  -nationality: String 
  -points: int
}

class Team {
  -name: String
  -country: String
}

class Race {
  -id: Long
  -name: String
  -raceDate: Date
}

class RaceResult {
  -id: Long
  -position: int
  -points: int
}

' Relationships
Driver "*" -- "1" Team : belongs to >
Driver "*" -- "*" Race : participates in >
RaceResult "*" -- "1" Race : references >
RaceResult "*" -- "1" Driver : references >

note "RaceResult provides the driver's\nposition and points for a specific race" as N2
RaceResult .. N2

@enduml 